--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   },
   "dependencies": {
     "@braintree/sanitize-url": "^5.0.0",
+    "@ensdomains/ensjs": "^2.1.0",
+    "@ensdomains/eth-ens-namehash": "^2.0.15",
     "@formatjs/intl-locale": "^2.4.13",
     "@formatjs/intl-pluralrules": "^4.0.3",
     "@formatjs/intl-relativetimeformat": "^8.0.1",
@@ -106,10 +108,12 @@
     "html2canvas": "^1.0.0-rc.7",
     "js-cookie": "^2.2.0",
     "jsonschema": "^1.2.2",
+    "jsx-runtime": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "lib-hubs": "github:mozillareality/lib-hubs#master",
     "linkify-it": "^2.0.3",
     "markdown-it": "^8.4.2",
+    "metamask-react": "^2.3.0",
     "moving-average": "^1.0.0",
     "networked-aframe": "github:mozillareality/networked-aframe#master",
     "nipplejs": "github:mozillareality/nipplejs#mr-social-client/master",
@@ -119,14 +123,14 @@
     "phoenix": "github:gfodor/phoenix-js#master",
     "prop-types": "^15.7.2",
     "raven-js": "^3.20.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-emoji-render": "^0.4.6",
     "react-hook-form": "^6.10.1",
     "react-infinite-scroller": "^1.2.2",
     "react-intl": "^5.10.1",
     "react-linkify": "^0.2.2",
-    "react-popper-2": "npm:react-popper@^2.2.3",
+    "react-popper-2": "npm:react-popper@^2.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^8.2.0",
